--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@
         });
 
         function findStrings(code) {
-    const regex = /"(?:\\.|[^"\\])*"/g;            return matches.map(match => match.slice(1, -1));
+        const regex = /"([^"]|\\.)*"/g;
+                const matches = code.match(regex) || [];
         }
 
         function processCode() {
